update url based on words

--- a/alarino-frontend/homepage.html
+++ b/alarino-frontend/homepage.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Alarino | English to Yoruba Translator & Dictionary Online</title>
-    <meta name="description" content="Alarino - English to Yoruba Translation Dictionary">
+    <title id="page-title">Alarino | English to Yoruba Translator & Dictionary Online</title>
+    <meta id="meta-description" name="description" content="Alarino - English to Yoruba Translation Dictionary">
     <meta name="keywords" content="Yoruba, English, translation, dictionary, African languages">
-    <link rel="canonical" href="https://alarino.com" />
+    <link id="canonical-link" rel="canonical" href="https://alarino.com" />
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
       body {
