--- a/alarino_frontend/homepage.html
+++ b/alarino_frontend/homepage.html
@@ -22,7 +22,7 @@
   <body class="bg-gradient-to-b from-[#5c4525] to-[#e8dfca] min-h-screen text-[#2e200f]">
     <!-- Navbar -->
     <header class="flex justify-between items-center p-6 space-y-0 text-white fixed top-0 left-0 right-0 z-2 bg-[#5c4525] bg-opacity-90">
-      <img src="alarino-logo-fit.svg" alt="Alarino Logo" class="h-10" />
+      <img src="/alarino-logo-fit.svg" alt="Alarino Logo" class="h-10" />
       <nav class="md:flex-row md:space-x-6 space-x-1 text-center">
         <a href="https://github.com/Iyki/alarino/issues" class="hover:underline">Contribute</a>
       </nav>
@@ -42,7 +42,7 @@
 
       <!-- Translation Section -->
       <section id="translateBox" class="mt-16 bg-[#f4ecdd] mx-6 md:mx-auto md:max-w-3xl p-6 rounded-3xl transition duration-300">
-        <div class="flex gap-2 mb-4">
+  <form onsubmit="translateWord(); return false;" class="flex gap-2 mb-4">
           <input
             id="englishWord"
             type="text"
@@ -50,12 +50,12 @@
             class="flex-grow px-4 py-2 rounded-md border border-gray-300"
           />
           <button
-            onclick="translateWord()"
+      type="submit"
             class="bg-[#1b2f1d] text-white px-4 py-2 rounded-md"
           >
             Translate
           </button>
-        </div>
+  </form>
         <div id="translationResult" class="bg-white p-4 rounded-xl text-left">
           <p id="wordLabel" class="text-xl font-bold">water <span class="text-sm text-gray-500">(example)</span></p>
           <p id="wordYoruba" class="italic text-gray-700">omi <span class="not-italic text-sm text-gray-500">n.</span></p>
@@ -141,8 +141,8 @@
     </div>
 
     <!-- Load the config script first in head -->
-    <script src="config.js"></script>
-    <script src="translate.js"></script>
+    <script src="/config.js"></script>
+    <script src="/translate.js"></script>
 
   </body>
 </html>
