add icon to site

--- a/alarino_frontend/homepage.html
+++ b/alarino_frontend/homepage.html
@@ -7,6 +7,7 @@
     <meta id="meta-description" name="description" content="Alarino - English to Yoruba Translation Dictionary">
     <meta name="keywords" content="Yoruba, English, translation, dictionary, African languages">
     <link id="canonical-link" rel="canonical" href="https://alarino.com" />
+    <link rel="icon" href="/alarino-logo-fit.svg" type="image/svg+xml" />
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
       body {
