markdown about page content

--- a/alarino_frontend/src/homepage.html
+++ b/alarino_frontend/src/homepage.html
@@ -25,6 +25,7 @@
     <header class="flex justify-between items-center p-6 space-y-0 text-white fixed top-0 left-0 right-0 z-2 bg-[#5c4525] bg-opacity-90">
       <img src="/alarino-logo-fit.svg" alt="Alarino Logo" class="h-10" />
       <nav class="md:flex-row md:space-x-6 space-x-1 text-center">
+        <a href="/about" class="hover:underline">About</a>
         <a href="https://github.com/Iyki/alarino/issues" class="hover:underline">Contribute</a>
       </nav>
     </header>
