--- a/alarino_frontend/src/homepage.html
+++ b/alarino_frontend/src/homepage.html
@@ -8,8 +8,8 @@
     <meta name="keywords" content="Yoruba, English, translation, dictionary, African languages">
     <link id="canonical-link" rel="canonical" href="https://alarino.com" />
     <link rel="icon" href="/alarino-logo-fit.svg" type="image/svg+xml" />
-    <script src="https://cdn.tailwindcss.com"></script>
-    <style>
+    <link href="/main.css" rel="stylesheet">
+    <!-- <style>
       body {
         font-family: serif;
       }
@@ -18,12 +18,14 @@
         from {opacity: 0; transform: translateY(-30px);}
         to {opacity: 1; transform: translateY(0);}
       }
-    </style>
+    </style> -->
   </head>
   <body class="bg-gradient-to-b from-[#5c4525] to-[#e8dfca] min-h-screen text-[#2e200f]">
     <!-- Navbar -->
     <header class="flex justify-between items-center p-6 space-y-0 text-white fixed top-0 left-0 right-0 z-2 bg-[#5c4525] bg-opacity-90">
+      <a href="/">
       <img src="/alarino-logo-fit.svg" alt="Alarino Logo" class="h-10" />
+      </a>
       <nav class="md:flex-row md:space-x-6 space-x-1 text-center">
         <a href="/about" class="hover:underline">About</a>
         <a href="https://github.com/Iyki/alarino/issues" class="hover:underline">Contribute</a>
